--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,17 @@ h2 {
 	text-align: center;
 }
 
+.link {
+	font-size: 0.5em;
+	text-align: center;
+	margin-top: 20px;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+
 .brainb {
 	background: rgb(216, 146, 170);
 }
@@ -45,3 +56,7 @@ h2 {
 	vertical-align: top;
 }
 
+.container {
+	max-width: 1280px;
+	margin: auto;
+}
