--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,11 @@ a {
 	text-decoration: none;
 }
 
-.brainb {
+body {
 	background: rgb(216, 146, 170);
 }
 
-.torsob {
+/*.torsob {
 	background: rgb(209, 148, 145);
 }
 
@@ -42,7 +42,7 @@ a {
 
 .neurob {
 	background: rgb(241, 177, 116);
-}
+}*/
 
 .kpics {
 	display: flex;
@@ -54,6 +54,8 @@ a {
 
 .pics img {
 	vertical-align: top;
+	margin: 5px;
+	border-radius: 50%;
 }
 
 .container {
